--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "@types/chai": "^4.0.10",
     "@types/mocha": "^2.2.45",
     "antlr4ts-cli": "^0.4.0-alpha.4",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "bluebird": "^3.5.1",
     "chai": "^4.1.2",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
     "gulp-typescript": "^3.2.3",
     "mocha": "^4.0.1",
     "ts-node": "^4.1.0",
