--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "bugs": {
     "url": "https://github.com/tsouza/yajs/issues"
   },
+  "bin": {
+      "yajs": "dist/index.js"
+  },
   "homepage": "https://github.com/tsouza/yajs#readme",
   "dependencies": {
     "@types/jsonpath": "^0.2.0",
