--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yajs",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0-beta1",
   "description": "Yet Another JSON Streamer",
   "main": "index.js",
   "scripts": {
