--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yajs",
+  "name": "yajson-stream",
   "version": "1.0.0-beta1",
   "description": "Yet Another JSON Streaming Tool",
   "scripts": {
