--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yajson-stream",
-  "version": "1.0.0-beta10",
+  "version": "1.0.0-rc1",
   "description": "Yet Another JSON Streaming Tool",
   "scripts": {
     "test": "node_modules/mocha/bin/_mocha --require ts-node/register 'src/test/**/*.ts'",
@@ -21,7 +21,7 @@
     "url": "https://github.com/tsouza/yajs/issues"
   },
   "bin": {
-    "yajs": "dist/index.js"
+    "yajs": "dist/main/index.js"
   },
   "homepage": "https://github.com/tsouza/yajs#readme",
   "dependencies": {
