--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.19",
-    "@types/chai": "^4.0.10",
-    "@types/mocha": "^2.2.45",
-    "antlr4ts-cli": "^0.4.0-alpha.4",
+    "@types/chai": "^4.1.0",
+    "@types/mocha": "^2.2.46",
+    "antlr4ts-cli": "^0.4.0-canary.37504efa",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "bluebird": "^3.5.1",
@@ -47,7 +47,7 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-typescript": "^3.2.3",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
     "ts-node": "^4.1.0",
     "typescript": "^2.6.2"
   }
