--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yajson-stream",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Yet Another JSON Streaming Tool",
   "scripts": {
     "test": "node_modules/mocha/bin/_mocha --require ts-node/register 'src/test/**/*.ts'",
@@ -28,6 +28,7 @@
   "dependencies": {
     "@types/jsonpath": "^0.2.0",
     "@types/lodash": "^4.14.92",
+    "@types/node": "^9.3.0",
     "antlr4": "^4.7.1",
     "antlr4ts": "^0.4.1-alpha.0",
     "lodash": "^4.17.4",
