--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@types/jsonpath": "^0.2.0",
     "@types/lodash": "^4.14.92",
     "@types/node": "^9.3.0",
+    "@types/through": "0.0.29",
     "antlr4": "^4.7.1",
     "antlr4ts": "^0.4.1-alpha.0",
     "lodash": "^4.17.4",
-    "stream-json": "^0.5.2",
+    "through": "^2.3.8",
     "ts-iterable": "^1.0.1"
   },
   "devDependencies": {
