--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "bugs": {
     "url": "https://github.com/tsouza/yajs/issues"
   },
-  "main": "dist/yajs.js",
+  "main": "dist/main/yajs.js",
   "bin": {
-    "yajs": "dist/index.js"
+    "yajs": "dist/main/index.js"
   },
   "homepage": "https://github.com/tsouza/yajs#readme",
   "dependencies": {
