--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@types/bluebird": "^3.5.19",
     "@types/chai": "^4.1.0",
     "@types/mocha": "^2.2.46",
-    "JSONStream": "^1.3.2",
     "antlr4ts-cli": "^0.4.0-alpha.4",
     "ascii-table": "0.0.9",
     "babel-cli": "^6.26.0",
@@ -57,7 +56,9 @@
     "gulp-file-copy": "0.0.1",
     "gulp-typescript": "^3.2.3",
     "humanize-duration": "^3.12.1",
+    "JSONStream": "^1.3.2",
     "measured": "^1.1.0",
+    "merge2": "^1.4.1",
     "mocha": "^4.1.0",
     "oboe": "^2.1.4",
     "ts-node": "^4.1.0",
